fix text overflow

--- a/src/pages/Sponsors.scss
+++ b/src/pages/Sponsors.scss
@@ -5,7 +5,7 @@
   .member {
     border-bottom: 0.66rem $primary solid;
     width: 22rem;
-    height: 18rem;
+    // height: 18rem;
     gap: 1rem;
     margin-bottom: 0;
     img {
